[tool.poetry]
name = "test-fork"
version = "0.1.0"
description = ""
authors = ["Tibor Arpas <tibor.arpas@infinit.sk>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
